Changelog
=========

0.2 (2011-03-08)
----------------

- Created recipe with ZopeSkel
  [Benoit Suttor - CIRB/CIBG]