@@ -1,21 +1,0 @@
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
-      lang="en"
-      metal:use-macro="here/main_template/macros/master"
-      i18n:domain="collective.linguafaq">
-<body>
-    <div metal:fill-slot="main">
-        <tal:main-macro metal:define-macro="main"
-                        tal:define="faq view/getAllFaq;">
-
-            <div tal:repeat="unefaq faq">
-                <h4 tal:content="unefaq/title">title</h4>
-                
-                <span tal:content="unefaq/answer">answer</span>
-            </div>
-            
-           
-            
-        </tal:main-macro>
-    </div>
-</body>
-</html>
