@@ -1,0 +1,29 @@
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
+      lang="en"
+      metal:use-macro="here/main_template/macros/master"
+      i18n:domain="collective.linguafaq">
+<body>
+    <div metal:fill-slot="main">
+
+        <tal:main-macro metal:define-macro="main"
+                        tal:define="group view/getAllIndex">
+        <h1 tal:content="context/title"> Title </h1>        
+            <ul class="indexfaq">            
+                <li tal:repeat="agroup group"  >  
+                    <a href="" tal:attributes="href agroup/url">
+                        <h2 tal:content="agroup/title">title</h2>
+                    </a>
+                    <ul tal:condition="python:len(agroup['faqs'])>0">
+                        <li tal:repeat="faq agroup/faqs">
+                            <a href="" tal:attributes="href faq/url">
+                                <h2 tal:content="faq/title">title</h2>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+            
+        </tal:main-macro>
+    </div>
+</body>
+</html>
